Correcciones y Cambio de Ayuda/Prueba

--- a/Ayudas.html
+++ b/Ayudas.html
@@ -50,9 +50,31 @@
     </div>
     <h3 class="Encabezados"> Prueba </h3>
     <div align="center" class="Centrado Contenido Ultimo">
-        <input id="multi1" type="text" placeholder="Primer Numero"  onchange="FunAyudas()">
+        <select class="SelecPrueba" id="multi1" type="text" onchange="FunAyudas()">
+            <option value="1"> 1 </option>
+            <option value="2"> 2 </option>
+            <option value="3"> 3 </option>
+            <option value="4"> 4 </option>
+            <option value="5"> 5 </option>
+            <option value="6"> 6 </option>
+            <option value="7"> 7 </option>
+            <option value="8"> 8 </option>
+            <option value="9"> 9 </option>
+            <option value="10"> 10 </option>
+        </select>
         X
-        <input id="multi2" type="text" placeholder="Segundo Numero" onchange="FunAyudas()">
+        <select class="SelecPrueba" id="multi2" type="text" onchange="FunAyudas()">
+            <option value="1"> 1 </option>
+            <option value="2"> 2 </option>
+            <option value="3"> 3 </option>
+            <option value="4"> 4 </option>
+            <option value="5"> 5 </option>
+            <option value="6"> 6 </option>
+            <option value="7"> 7 </option>
+            <option value="8"> 8 </option>
+            <option value="9"> 9 </option>
+            <option value="10"> 10 </option>
+        </select>
         =
         <span id="resultadoAyudas" ></span>
     </div>
