--- a/Juego.html
+++ b/Juego.html
@@ -34,7 +34,7 @@
 
 <body class="FondoJuego" onload="Segundero(); Juguemos()">
 <h3 class="Contenido CenJuego Encabezados">Escribir la respuesta correcta a la siguiente multiplicación:</h3>
-    <section>
+    <section id="MultiJuego">
         <div class="Numeros">
             <span id="num1"> 0 </span>
              X
