--- a/Juego.html
+++ b/Juego.html
@@ -40,8 +40,8 @@
                 <span id="num1"> 0 </span>
                 X
                 <span id="num2"> 0 </span>
-                =
-                <input id="num3" type="text" placeholder="respuesta">
+                <br>
+                <label>Respuesta:<input id="num3" type="text"></label>
                 <button type="button" onclick="SumarPuntaje()">Siguiente</button>
             </div>
         </article>
