--- a/Juego.html
+++ b/Juego.html
@@ -44,7 +44,7 @@
                 X
                 <span id="num2"> 0 </span>
                 <br>
-                <label>Respuesta:<input id="num3" type="text"></label>
+                <label for="num3">Respuesta:<input id="num3" type="text"></label>
 
                 <button type="button" onclick="SumarPuntaje(); Cantidad(); Limpiar()">Siguiente</button>
             </div>
