--- a/Jugar.html
+++ b/Jugar.html
@@ -16,7 +16,7 @@
 
 <header>
   <div class="Logo">
-    <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
+    <a href="Index.html"><img alt="Logo de la página" src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
     <h1>Multiplicador de Tablas</h1>
   </div>
   <nav>
@@ -37,7 +37,7 @@
     A continuación se encuentra la explicación paso a paso del juego. El objetivo, es que puedas aprender
     las tablas de multiplicar de forma dinámica y divertida, tratando de aprender de una manera distinta a la
     tradicional.
-    <div align="center"  class="listaJuego">
+    <div class="listaJuego">
       <ol class="ReglasJuego">
         <li>Se asignaran dos números al azar del 1 al 10</li>
         <li>Deberás realizar la multiplicación de la forma más conveniente para vos</li>
