--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 
 <header>
     <div class="Logo">
-        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
+        <a href="Index.html"><img alt="Logo de la página" src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
         <h1>Multiplicador de Tablas</h1>
     </div>
     <nav>
@@ -54,7 +54,9 @@
     </div>
     <h3 class="Encabezados"> Video explicativo </h3>
     <br>
-    <div align="center"> <iframe id="VideoExplicativo" width="575" height="290"  src="https://www.youtube.com/embed/YFtEaVw5k1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div id="VideoExplicativo">
+        <iframe  width="575" height="290"  src="https://www.youtube.com/embed/YFtEaVw5k1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </section>
 </body>
 </html>
