--- a/Juego.html
+++ b/Juego.html
@@ -21,7 +21,7 @@
         <h1>Juego</h1>
     </div>
     <nav>
-        <div id="puntaje_tiempo">
+        <div class="puntaje_tiempo">
             <div>
                 Puntaje:<span onload="SumarPuntaje()" id="puntaje"> 0 </span>
             </div>
@@ -50,7 +50,7 @@
             </div>
         </article>
         <br>
-        <p id="pizarron" class="CenJuego">
+        <p id="pizarron">
             Podes usar el pizarrón de abajo para ayudarte!
         </p>
         <canvas width="800px" height="350px" id="canvas" onmousemove="DibujarCanvas(event)">
