correcion comentarios, tildes y atributo alt imagenes

--- a/Ayudas.html
+++ b/Ayudas.html
@@ -16,7 +16,7 @@
 
 <header>
     <div class="Logo">
-        <a href="Index.html"><img alt="Logo de la página" src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
+        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo" alt="Logo de la página"></a>
         <h1>Multiplicador de Tablas</h1>
     </div>
     <nav>
@@ -43,7 +43,7 @@
         A la hora de realizar las multiplicaciones, en ciertos casos hay trucos o ayudas que se pueden llevar a cabo para facilitar el aprendizaje de estas,
         Algunos de estos casos serian:
         <ul class="ConsejosTablas" >
-            <li> La tabla del número 2, se caracteriza por ser todos los números pares. Es decir, todo número par hasta el 20 (2 X 10 = 20) fa a ser parte de esta tabla, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-2-Navidades-para-Primaria.jpg" alt="Tabla del 2"> </li>
+            <li> La tabla del número 2, se caracteriza por ser todos los números pares. Es decir, todo número par hasta el 20 (2 X 10 = 20) va a ser parte de esta tabla, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-2-Navidades-para-Primaria.jpg" alt="Tabla del 2"> </li>
             <li> La tabla del número 5, se caracteriza por la facilidad para aprenderla ya que a diferencia de los demás números, todo número multiplicado por 5 va a terminar en 5 o 0. Es decir, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-5-carnaval.jpg" alt="Tabla del 5"> </li>
             <li> La tabla del número 9, se caracteriza porque hay un método muy simple para saber como es la tabla. Este método se basa en sumar un número a la decena cada vez y al mismo tiempo restarle un número a la unidad, de la siguiente forma: <img class="FotosAyudas" src="Imagenes/Ayuda_Tablas_9.png" alt="Ayuda tabla del 9"> </li>
         </ul>
