--- a/Extras.html
+++ b/Extras.html
@@ -16,7 +16,7 @@
 
 <header>
     <div class="Logo">
-        <a href="Index.html"><img alt="Logo de la página" src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
+        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo" alt="Logo de la página"></a>
         <h1>Multiplicador de Tablas</h1>
     </div>
     <nav>
