--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 
 <header>
     <div class="Logo">
-        <a href="Index.html"><img alt="Logo de la página" src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
+        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo" alt="Logo de la página"></a>
         <h1>Multiplicador de Tablas</h1>
     </div>
     <nav>
@@ -39,17 +39,16 @@
         Los primeros en usar la multiplicación fueron los egipcios, aproximadamente en el año 2700 A.C. Usaron un sistema que llamaron multiplicación
         por duplicación. Otra civilización pionera fue la sumeria, en Asia menor, hacia el 2600 A.C. Inventaron las tablas de multiplicar
         y las escribían en tablas de arcilla secadas al sol. La multiplicación que se usa en la actualidad, fue inventada por los hindúes.
-        Fin
         Especialmente, Pitágoras, filósofo griego, fue llamado desarrollador y analizador de la multiplicación. Un dato particular, es que en China,
         La multiplicación se realizaba con varillas de bambú. Las Varillas se disponen en forma horizontal,
         las que corresponden al multiplicando y en forma vertical las que corresponden al multiplicador.
     </div>
     <br>
-    <h3 class="Encabezados"> Que es la mutiplicacion </h3>
+    <h3 class="Encabezados"> Que es la mutiplicación </h3>
     <br>
     <div class="OrigenMultiplicacion">
         La multiplicación es una forma muy rápida de sumar el mismo número una y otra vez. Por ejemplo, 2 x 3, podemos sumar el número 2, tres veces (2 + 2 + 2)
-        No podemos hacerlo de forma "mágica" y veloz conociendo las tablas de multiplicar. Es decir, la multiplicación es tomar un número,
+        ó podemos hacerlo de forma "mágica" y veloz conociendo las tablas de multiplicar. Es decir, la multiplicación es tomar un número,
         y sumarlo a sí mismo la cantidad de veces deseadas.
     </div>
     <h3 class="Encabezados"> Video explicativo </h3>
