--- a/Juego.html
+++ b/Juego.html
@@ -17,7 +17,7 @@
 
 <header>
     <div class="Logo">
-        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
+        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo" alt="Logo de la página"></a>
         <h1>Juego</h1>
     </div>
     <nav>
@@ -51,7 +51,7 @@
         </article>
         <br>
         <p id="pizarron">
-            Podes usar el pizarrón de abajo para ayudarte!
+            Podés usar el pizarrón de abajo para ayudarte!
         </p>
         <canvas width="800px" height="350px" id="canvas" onmousemove="DibujarCanvas(event)">
         </canvas>
