--- a/Juego.html
+++ b/Juego.html
@@ -35,7 +35,7 @@
     </nav>
 </header>
 
-<body class="FondoJuego" onload="Segundero(); Juguemos(), DibujarCanvas()" >
+<body class="FondoJuego" onload="Segundero(); Juguemos(); DibujarCanvas()" >
     <h3 class="Contenido CenJuego Encabezados" id="ConsignaJuego">Escribir la respuesta correcta a la siguiente multiplicación:</h3>
     <div>
         <article id="MultiJuego">
