--- a/Juego.html
+++ b/Juego.html
@@ -55,7 +55,7 @@
         </p>
         <canvas width="800px" height="350px" id="canvas" onmousemove="DibujarCanvas(event)">
         </canvas>
-        <button type="button" class="limpiador" onclick="Limpiar()">Limpiar Pizarron</button>
+        <button type="button" id="BotonLimpia" class="limpiador" onclick="Limpiar()">Limpiar Pizarron</button>
     </div>
 </body>
 </html>
