--- a/Juego.html
+++ b/Juego.html
@@ -46,11 +46,11 @@
                 <br>
                 <label for="num3">Respuesta:<input id="num3" type="text"></label>
 
-                <button type="button" onclick="SumarPuntaje(); Cantidad(); Limpiar()">Siguiente</button>
+                <button type="button" onclick="SumarPuntaje(); Cantidad()">Siguiente</button>
             </div>
         </article>
         <br>
-        <canvas width="1300px" height="350px" id="canvas" onmousemove="DibujarCanvas(event)">
+        <canvas width="1300px" height="350px" id="canvas" onload="Animar()">
         </canvas>
     </div>
 </body>
