--- a/Juego.html
+++ b/Juego.html
@@ -35,7 +35,7 @@
     </nav>
 </header>
 
-<body class="FondoJuego" onload="Segundero(); Juguemos(); setInterval(Animar, 3000)" >
+<body class="FondoJuego" onload="Segundero(); Juguemos(); Animar()" >
     <h3 class="Contenido CenJuego Encabezados" id="ConsignaJuego">Escribir la respuesta correcta a la siguiente multiplicación:</h3>
     <div>
         <article id="MultiJuego">
