--- a/Juego.html
+++ b/Juego.html
@@ -50,7 +50,7 @@
             </div>
         </article>
         <br>
-        <canvas width="600px" height="350px" id="canvas" onload="Animar()">
+        <canvas width="1100px" height=400px" id="canvas" onload="Animar()">
         </canvas>
     </div>
 </body>
