--- a/Juego.html
+++ b/Juego.html
@@ -29,7 +29,7 @@
                 Tiempo: <span id="minutos">0</span>:<span id="segundos">0</span>
             </div>
             <div>
-                <span id="Jugados">0</span>/1
+                <span id="Jugados">0</span>/10
             </div>
         </div>
     </nav>
@@ -50,7 +50,7 @@
             </div>
         </article>
         <br>
-        <canvas width="1100px" height=400px" id="canvas" onload="Animar()">
+        <canvas width="1100px" height=400px" id="canvas" onload="setInterval(Animar())">
         </canvas>
     </div>
 </body>
